# falconkv

./: CLAUDE.md  CMakeLists.txt  build.sh
config/: falconkv.json
doc/: falconkv_build_guide.md  falconkv_client_design.md  falconkv_design.md  falconkv_meta_design.md  falconkv_scheduler_design.md  falconkv_store_design.md  falconkv_test_design.md  falconkv_transfer_design.md  requirement_desc.md
proto/: falconkv_meta.proto  falconkv_scheduler.proto  falconkv_store.proto
python/: setup.py
python/_pyfalconkv_internal/: CMakeLists.txt  _pyfalconkv_internal.cpp  falconkv_bridge.cpp  falconkv_bridge.h
python/pyfalconkv/: __init__.py  adapter.py  client.py  connector.py
src/client/: CMakeLists.txt  falconkv_client_impl.cpp  falconkv_client_impl.h  key_desc_cache.cpp  key_desc_cache.h  remote_read_backend.cpp  remote_read_backend.h
src/common/: CMakeLists.txt  aligned_allocator.h  buddy_allocator.cpp  buddy_allocator.h  config.cpp  config.h  logging.cpp  logging.h  slot_allocator.cpp  slot_allocator.h  status.cpp  status.h  time_util.h  types.h
src/meta/: CMakeLists.txt  falconkv_master_main.cpp  meta_manager.cpp  meta_manager.h  meta_rpc_client.cpp  meta_rpc_client.h  meta_server.cpp  meta_server.h  meta_service_impl.cpp  meta_service_impl.h
src/scheduler/: CMakeLists.txt  falconkv_scheduler_main.cpp  net_bw_accumulator.cpp  net_bw_accumulator.h  node_stats.cpp  node_stats.h  passthrough_policy.cpp  passthrough_policy.h  scheduler_proxy.cpp  scheduler_proxy.h  scheduler_server.cpp  scheduler_server.h  scheduler_service.cpp  scheduler_service.h  scheduler_service_impl.cpp  scheduler_service_impl.h  ssd_bw_accumulator.cpp  ssd_bw_accumulator.h
src/store/: CMakeLists.txt  aligned_buffer_pool.cpp  aligned_buffer_pool.h  evict_manager.cpp  evict_manager.h  falconkv_store.cpp  falconkv_store.h  fd_cache.cpp  fd_cache.h  io_thread_pool.cpp  io_thread_pool.h  io_uring_engine.cpp  io_uring_engine.h  meta_sync_client.cpp  meta_sync_client.h  node_local_accessor.cpp  node_local_accessor.h  pending_evict_queue.cpp  pending_evict_queue.h  store_meta_index.cpp  store_meta_index.h  store_rpc_client.cpp  store_rpc_client.h  store_rpc_client_manager.cpp  store_rpc_client_manager.h  store_server.cpp  store_server.h  store_service_impl.cpp  store_service_impl.h
src/transfer/: CMakeLists.txt  brpc_channel.cpp  brpc_channel.h  retry_policy.cpp  retry_policy.h  transfer_channel.h  transfer_manager.cpp  transfer_manager.h
tests/: CMakeLists.txt
tests/integration/: __init__.py  conftest.py  pytest.ini  test_e2e_batch_ops.py  test_evict_and_scheduler_e2e.py  test_falconkv_connector_e2e.py  test_functional_e2e.py  test_lmcache_adapter.py  test_scheduler_integration.py
tests/module/: CMakeLists.txt  test_bypass_e2e.cpp  test_client_batch_ops.cpp  test_meta_rpc_service.cpp  test_scheduler_service.cpp  test_store_engine.cpp  test_transfer_brpc.cpp
tests/perf/: perf_aggregate.py  perf_client.py  perf_common.sh  perf_config.json  perf_config_cross_node.json  perf_config_local.json  perf_config_node_read.json  run_perf.sh  run_perf_cross_node.sh  run_perf_local.sh  run_perf_node_read.sh
tests/unit/client/: CMakeLists.txt  test_alloc_policy.cpp  test_data_structures.cpp  test_key_desc_cache.cpp  test_remote_read_backend.cpp
tests/unit/meta/: CMakeLists.txt  test_buddy_allocator.cpp  test_meta_rpc_client.cpp  test_meta_service_impl.cpp  test_meta_sync_commit.cpp  test_slot_allocator.cpp  test_slot_allocator_perf.cpp
tests/unit/scheduler/: CMakeLists.txt  test_bypass.cpp  test_net_bw_accumulator.cpp  test_node_stats.cpp  test_passthrough_policy.cpp  test_ssd_bw_accumulator.cpp
tests/unit/store/: CMakeLists.txt  test_aligned_allocator.cpp  test_aligned_buffer_pool.cpp  test_direct_io.cpp  test_evict_manager.cpp  test_fd_cache.cpp  test_file_naming.cpp  test_io_thread_pool.cpp  test_io_uring_engine.cpp  test_meta_sync_client.cpp  test_node_local_accessor.cpp  test_pending_evict_queue.cpp  test_store_meta_index.cpp  test_store_rpc_client.cpp  test_store_service_impl.cpp
tests/unit/transfer/: CMakeLists.txt  test_transfer_channel.cpp  test_transfer_manager.cpp
